[package]
name = "httpget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.25.0", features = ["rt", "io-std"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["rt", "io-std", "test-util", "macros"] }

[profile.release]
strip = true
